Small fixed for image paths.

--- a/visage.html
+++ b/visage.html
@@ -40,15 +40,15 @@ $(document).ready(function () {
 		$("#images-alt").loadImages(function () {
 			$("#images-alt a").visage({
 				"files": {
-					"blank": "./res-alt/blank.gif",
-					"error": "./res-alt/error.png"
+					"blank": "./res-alt/images/blank.gif",
+					"error": "./res-alt/images/error.png"
 				},
 				"attr": {
 					"close": {"id": "visage-alt-close"},
 					"title": {"id": "visage-alt-title"},
 					"count": {"id": "visage-alt-count"},
 					"container": {"id": "visage-alt-container"},
-					"image": {"id": "visage-alt-image", "src": "./res-alt/blank.gif"},
+					"image": {"id": "visage-alt-image", "src": "./res-alt/images/blank.gif"},
 					"visage-alt": {"id": "visage-alt"},
 					"overlay": {"id": "visage-alt-overlay"},
 					"prev": {"id": "visage-alt-nav-prev"},
