Small class name fix.

--- a/visage.html
+++ b/visage.html
@@ -49,7 +49,7 @@ $(document).ready(function () {
 					"count": {"id": "visage-alt-count"},
 					"container": {"id": "visage-alt-container"},
 					"image": {"id": "visage-alt-image", "src": "./res-alt/images/blank.gif"},
-					"visage-alt": {"id": "visage-alt"},
+					"visage": {"id": "visage-alt"},
 					"overlay": {"id": "visage-alt-overlay"},
 					"prev": {"id": "visage-alt-nav-prev"},
 					"prev_disabled": {"id": "visage-alt-nav-prev"},
